objects/vlocity_cmt__StoryObjectConfiguration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Each Vlocity Story Object Configuration custom setting record defines an object which is included in the customer story component and configures how the data is accessed and assembled into the component.</description>
    <fields>
        <fullName>vlocity_cmt__DetailFields__c</fullName>
        <label>Detail Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__HasOwner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IndicatorImage__c</fullName>
        <label>Indicators</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__InvokeClassName__c</fullName>
        <label>Invoke Class Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__InvokeMethodName__c</fullName>
        <label>Invoke Method Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JunctionLookupField__c</fullName>
        <label>Junction Lookup Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JunctionObjectFilter__c</fullName>
        <label>Junction Object Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JunctionObject__c</fullName>
        <label>Junction Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__NavigationFieldName__c</fullName>
        <label>Navigation Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ParentObjectField__c</fullName>
        <label>Parent Object Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ParentObjectNameFieldPath__c</fullName>
        <label>Parent Object Name Field Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ParentObjectName__c</fullName>
        <label>Parent Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuickAction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quick Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ReferenceObjectId__c</fullName>
        <label>Reference Object Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ReferenceObjectName__c</fullName>
        <label>Reference Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SortFieldIsDate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sort Field Is Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StoryObjectFilter__c</fullName>
        <label>Story Object Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StoryObjectIsNotSObject__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Story Object Is Not SObject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StoryObjectLookupField__c</fullName>
        <label>Story Object Lookup Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StoryObjectName__c</fullName>
        <label>Story Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StoryObjectReferenceId__c</fullName>
        <description>It is an Id field in list object and used to reference to the junction sub query</description>
        <label>Story Object Reference Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StoryObjectSortField__c</fullName>
        <label>Story Object Sort Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SummaryFields__c</fullName>
        <label>Summary Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Story Object Configuration</label>
</CustomObject>